--- a/cochabamba- cliza.html
+++ b/cochabamba- cliza.html
@@ -75,7 +75,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2024 Provincia de Tarata | Diseñado por [You MEN]</p>
+    <p>&copy; pollito rico es en verdad </p>
 </footer>
 
 </body>
